Read Keywordservices url from Env