@@ -10,17 +10,15 @@ import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
 public class KeywordsApi {
-    private static String BaseURL = "http://localhost:5000/extract?text=";
+    private static final String BaseURL = System.getenv("KEYWORD_SERVICE_URL");
 
     public static JSONObject getKeywords(String text) throws URISyntaxException, IOException, InterruptedException {
-        String url = new StringBuilder()
-                .append(BaseURL)
-                .append(URLEncoder.encode(text, "UTF-8"))
-                .toString();
+        String url = String.format("%s/extract?text=%s", BaseURL, URLEncoder.encode(text, StandardCharsets.UTF_8));
         HttpRequest request = HttpRequest
                 .newBuilder(new URI(url))
                 .GET()
